fix styles structure

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,8 +6,12 @@
 @import './base/common-styles';
 
 // components styles
-@import './components/button';
-
 @import './components/header';
 @import './components/logo';
 @import './components/section';
+@import './components/button';
+@import './components/slider';
+@import './components/testimonial-item';
+
+// page specific styles
+@import './pages/homepage';
