--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,10 +30,6 @@ img {
   height: auto;
 }
 
-h4 {
-  font-weight: normal;
-}
-
 .marked {
   position: relative;
   font-weight: 500;
@@ -50,28 +46,6 @@ h4 {
   bottom: -2px;
 }
 
-.button {
-  border: none;
-  box-shadow: none;
-  cursor: pointer;
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.86;
-  text-align: center;
-  text-transform: uppercase;
-  border-radius: 26px;
-  padding: 14px 32px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.button--main {
-  background: #f3751b;
-  color: #ffffff;
-}
-.button--main:hover, .button--main:focus {
-  background: #cd6318;
-}
-
 header {
   padding: 30px 0;
 }
@@ -80,6 +54,7 @@ header {
     padding: 60px 0 50px;
   }
 }
+
 .logo {
   display: block;
 }
@@ -123,6 +98,28 @@ header {
   .section__text {
     font-size: 20px;
   }
+}
+
+.button {
+  border: none;
+  box-shadow: none;
+  cursor: pointer;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.86;
+  text-align: center;
+  text-transform: uppercase;
+  border-radius: 26px;
+  padding: 14px 32px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button--main {
+  background: #f3751b;
+  color: #ffffff;
+}
+.button--main:hover, .button--main:focus {
+  background: #cd6318;
 }
 
 .slider {
@@ -302,6 +299,9 @@ header {
   }
 }
 
-.leave-comment-btn {
+/*
+    some specific styles for homepage elements
+*/
+#testimonials .leave-comment-btn {
   margin: 48px auto;
 }
